{
  "version": 4,
  "terraform_version": "1.6.2",
  "serial": 130,
  "lineage": "c3942e98-ce39-dbff-b7c0-c4e9adc28f6b",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:security-group/sg-0e6074e763a34e904",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e6074e763a34e904",
            "ingress": [],
            "name": "imersao-eks-cluster-20231021155245465300000001",
            "name_prefix": "imersao-eks-cluster-",
            "owner_id": "825467095154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imersao-eks-cluster"
            },
            "tags_all": {
              "Name": "imersao-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:security-group/sg-038546d9056873ae5",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-038546d9056873ae5",
            "ingress": [],
            "name": "imersao-eks-node-20231021155245466000000003",
            "name_prefix": "imersao-eks-node-",
            "owner_id": "825467095154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imersao-eks-node",
              "kubernetes.io/cluster/imersao-eks": "owned"
            },
            "tags_all": {
              "Name": "imersao-eks-node",
              "kubernetes.io/cluster/imersao-eks": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1368228710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e6074e763a34e904",
            "security_group_rule_id": "sgr-0d0ef194aaefe73d6",
            "self": false,
            "source_security_group_id": "sg-038546d9056873ae5",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1473213694",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0ae367491367fc13e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2059525215",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0dfcfbd8cbd5ec43e",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1385484772",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-06d723ae567b2dc0e",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2614539890",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-00f6dd71f92225997",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2290780755",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0fe5ada5438f2fa13",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3962288536",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0d079ffbd87336d91",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2423399921",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0aad56c043d72e9f4",
            "self": false,
            "source_security_group_id": "sg-0e6074e763a34e904",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4215562395",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-00218818e364834ee",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3945407717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-0e555ebd10f323fe0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-1333102346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-038546d9056873ae5",
            "security_group_rule_id": "sgr-03ce6f741493951d6",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:network-acl/acl-06549843d51afec73",
            "default_network_acl_id": "acl-06549843d51afec73",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06549843d51afec73",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "825467095154",
            "subnet_ids": [
              "subnet-0133a0a9c9e6edbbb",
              "subnet-0168c4b9452208cae",
              "subnet-0661279483e78fc5a",
              "subnet-0668b198a6ccb077f",
              "subnet-071957acbd90f2d74",
              "subnet-0bd8840eb1c425c3c"
            ],
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:route-table/rtb-0384cf4c9fb376eb8",
            "default_route_table_id": "rtb-0384cf4c9fb376eb8",
            "id": "rtb-0384cf4c9fb376eb8",
            "owner_id": "825467095154",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:security-group/sg-0c85c7eecd75c17b5",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c85c7eecd75c17b5",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "825467095154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-default",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0db040717ab7d7f",
            "association_id": "eipassoc-06f8c302226b6a1da",
            "domain": "vpc",
            "id": "eipalloc-0b0db040717ab7d7f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f230d879ee07944e",
            "private_dns": "ip-10-0-101-240.ec2.internal",
            "private_ip": "10.0.101.240",
            "public_dns": "ec2-44-220-10-240.compute-1.amazonaws.com",
            "public_ip": "44.220.10.240",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070a9d2a495774e7e",
            "association_id": "eipassoc-0834bef9e713c371b",
            "domain": "vpc",
            "id": "eipalloc-070a9d2a495774e7e",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bd0e6d1d01d4e81d",
            "private_dns": "ip-10-0-102-11.ec2.internal",
            "private_ip": "10.0.102.11",
            "public_dns": "ec2-35-170-38-26.compute-1.amazonaws.com",
            "public_ip": "35.170.38.26",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edce8693302e3fbf",
            "association_id": "eipassoc-040d2e4548696242c",
            "domain": "vpc",
            "id": "eipalloc-0edce8693302e3fbf",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e728c387694682c9",
            "private_dns": "ip-10-0-103-166.ec2.internal",
            "private_ip": "10.0.103.166",
            "public_dns": "ec2-52-4-184-220.compute-1.amazonaws.com",
            "public_ip": "52.4.184.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:internet-gateway/igw-0eb08bb9354c09c72",
            "id": "igw-0eb08bb9354c09c72",
            "owner_id": "825467095154",
            "tags": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b0db040717ab7d7f",
            "association_id": "eipassoc-06f8c302226b6a1da",
            "connectivity_type": "public",
            "id": "nat-059dfdd1565a15f69",
            "network_interface_id": "eni-0f230d879ee07944e",
            "private_ip": "10.0.101.240",
            "public_ip": "44.220.10.240",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0133a0a9c9e6edbbb",
            "tags": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-070a9d2a495774e7e",
            "association_id": "eipassoc-0834bef9e713c371b",
            "connectivity_type": "public",
            "id": "nat-0e9a8798d1d34e692",
            "network_interface_id": "eni-0bd0e6d1d01d4e81d",
            "private_ip": "10.0.102.11",
            "public_ip": "35.170.38.26",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-071957acbd90f2d74",
            "tags": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0edce8693302e3fbf",
            "association_id": "eipassoc-040d2e4548696242c",
            "connectivity_type": "public",
            "id": "nat-086fb90433f0b0e3a",
            "network_interface_id": "eni-0e728c387694682c9",
            "private_ip": "10.0.103.166",
            "public_ip": "52.4.184.220",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0661279483e78fc5a",
            "tags": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0922ff3e7772cf9501080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-059dfdd1565a15f69",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0922ff3e7772cf950",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0caf91c5e50fdc94e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e9a8798d1d34e692",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0caf91c5e50fdc94e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0165049dd46ac685c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-086fb90433f0b0e3a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0165049dd46ac685c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb08bb9354c09c72",
            "id": "r-rtb-00bd99fd4898c90f51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00bd99fd4898c90f5",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:route-table/rtb-0922ff3e7772cf950",
            "id": "rtb-0922ff3e7772cf950",
            "owner_id": "825467095154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-059dfdd1565a15f69",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:route-table/rtb-0caf91c5e50fdc94e",
            "id": "rtb-0caf91c5e50fdc94e",
            "owner_id": "825467095154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e9a8798d1d34e692",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:route-table/rtb-0165049dd46ac685c",
            "id": "rtb-0165049dd46ac685c",
            "owner_id": "825467095154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-086fb90433f0b0e3a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:route-table/rtb-00bd99fd4898c90f5",
            "id": "rtb-00bd99fd4898c90f5",
            "owner_id": "825467095154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eb08bb9354c09c72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "imersao-vpc-public",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc-public",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0524fe2b4e0741dc5",
            "route_table_id": "rtb-0922ff3e7772cf950",
            "subnet_id": "subnet-0bd8840eb1c425c3c"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a840cba519c2dc78",
            "route_table_id": "rtb-0caf91c5e50fdc94e",
            "subnet_id": "subnet-0168c4b9452208cae"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f17daced952bccba",
            "route_table_id": "rtb-0165049dd46ac685c",
            "subnet_id": "subnet-0668b198a6ccb077f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d08380b1230aed91",
            "route_table_id": "rtb-00bd99fd4898c90f5",
            "subnet_id": "subnet-0133a0a9c9e6edbbb"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b6b4eec6b81a30f",
            "route_table_id": "rtb-00bd99fd4898c90f5",
            "subnet_id": "subnet-071957acbd90f2d74"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a899e3140b102e89",
            "route_table_id": "rtb-00bd99fd4898c90f5",
            "subnet_id": "subnet-0661279483e78fc5a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-0bd8840eb1c425c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bd8840eb1c425c3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-0168c4b9452208cae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0168c4b9452208cae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-0668b198a6ccb077f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0668b198a6ccb077f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-private-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernets.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-0133a0a9c9e6edbbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0133a0a9c9e6edbbb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1a",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-071957acbd90f2d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071957acbd90f2d74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1b",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:subnet/subnet-0661279483e78fc5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0661279483e78fc5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825467095154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "imersao-vpc-public-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "imersao-vpc-public-us-east-1c",
              "kubernetes.io/cluster/imersao-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-05d59ad30de47ef0c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:825467095154:vpc/vpc-05d59ad30de47ef0c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06549843d51afec73",
            "default_route_table_id": "rtb-0384cf4c9fb376eb8",
            "default_security_group_id": "sg-0c85c7eecd75c17b5",
            "dhcp_options_id": "dopt-01b4de9a04edda700",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d59ad30de47ef0c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0384cf4c9fb376eb8",
            "owner_id": "825467095154",
            "tags": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            },
            "tags_all": {
              "Name": "imersao-vpc",
              "kubernetes.io/cluster/imersao-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}